# Acid-Engine

./: .gitignore  AcidusVersio.afdesign  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  plugin-mm.json  plugin.json
.github/workflows/: build.yml
src/: AcidEngine.cpp  AcidusVersio.cpp  plugin.cpp  plugin.hpp
src/open303/: GlobalDefinitions.h  LICENSE  rosic_MipMappedWaveTable.h  rosic_Open303.cpp  rosic_Open303.h  rosic_TeeBeeFilter.h
